--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,40 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="img"></div>
-    <h1>MORGAN HEMAN</h1>
-    <p>Job Title</p>
-    <span class="par">EMAIL: morgan@free-cv-templates.com</span>
-    <span>PHONE: 010-000 00 00</span>
-    <div id="empty"></div>
-    <div id="first-part">
-        <h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span>
-        <h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span><h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span><h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span>
-    </div>
-    <div id="second-part">
-        <h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span>
-        <h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span><h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span><h3>WORK EXPEIRENCE</h3>
-        <h3>Company - Title</h3>
-        <span>City|2011-Present</span>
-    </div>
+    <div id="title">simple html theme <br> url list</div>
+    <section id="content">
+        <div id="line">
+            <div id="icons">
+                <i class="far fa-circle"></i>
+                <i class="far fa-circle"></i>
+                <i class="far fa-circle"></i>
+            </div>
+        </div>
+        <div id="img">
+        </div>
+        <div id="status">
+            You know me <h6>I'm lack of creativity but I don't want to copy anybody</h6>
+        </div>
+        <div id="sm">
+            <a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram" style="color:rgb(223, 72, 26)"></i></a>
+            <a href="https://www.youtube.com/" target="blank"><i class="fab fa-youtube" style="color: red"></i></a>
+            <a href="https://twitter.com/?lang=en" target="blank"><i class="fab fa-twitter" style="color: blue"></i></a>
+        </div>
+        <section id="links">
+            <a href="https://www.google.com/" target="blank">
+                Click for Google
+            </a>
+            <a href="https://www.amazon.com/" target="blank">
+                Click for Amazon
+            </a>
+            <a href="https://www.tesla.com/" target="blank">
+                Click for Tesla
+            </a>
+            <a href="https://www.netflix.com/az/" target="blank">
+                Click for Netflix
+            </a>
+            <a href="https://www.samsung.com/az/" target="blank">
+                Click for Samsung
+            </a>
+        </section>
 
+    </section>
 </body>
 
 </html>
