--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -11,46 +11,7 @@
 </head>
 
 <body>
-    <section id="flexxy">
-        <div style="width: 500px;" class="inline-text">niyə<h1> Code Academy?</h1>
-            Biz dərsləri Zəmanətli Təhsil Sistemi ilə Beynəlxalq
-            Sertifikasiya imtahanlarının kurrikulumu əsasında
-            keçirik. Talant Mərkəzi, Mentor Sistemi kimi özəlliklər və müasir tədris metodları ilə onlara praktiki
-            məşğələlər təklif edirik.
-        </div>
-        <a><div>
-            <img src="/assets/images/1.png" alt="picture">
-            <div class="inline-text">
-                <h4>Beytnelxalq Sertifikasiya</h4>Microsoft Imagine Academy, Autodesk və Digital Marketing Institute-un
-                Azərbaycandakı eksklüziv partnyoru olmaqla tələbələrimizi qlobal bazarda rəqabət apara biləcək
-                peşəkarlar olaraq yetişdirmək üçün yola çıxmışıq.
-            </div>
-        </div></a>
-        <a><div>
-            <img src="/assets/images/2.png" alt="picture">
-            <div class="inline-text">
-                <h4>Beytnelxalq Sertifikasiya</h4> Microsoft Imagine Academy, Autodesk və Digital Marketing Institute-un
-                Azərbaycandakı eksklüziv partnyoru olmaqla tələbələrimizi qlobal bazarda rəqabət apara biləcək
-                peşəkarlar olaraq yetişdirmək üçün yola çıxmışıq.
-            </div>
-        </div></a> 
-        <a><div id="self">
-            <img src="/assets/images/3.png" alt="picture">
-            <div class="inline-text">
-                <h4>Beytnelxalq Sertifikasiya</h4>Microsoft Imagine Academy, Autodesk və Digital Marketing Institute-un
-                Azərbaycandakı eksklüziv partnyoru olmaqla tələbələrimizi qlobal bazarda rəqabət apara biləcək
-                peşəkarlar olaraq yetişdirmək üçün yola çıxmışıq.
-            </div>
-        </div></a> 
-        <a> <div>
-            <img src="/assets/images/4.png" alt="picture">
-            <div class="inline-text">
-                <h4>Beytnelxalq Sertifikasiya</h4> Microsoft Imagine Academy, Autodesk və Digital Marketing Institute-un
-                Azərbaycandakı eksklüziv partnyoru olmaqla tələbələrimizi qlobal bazarda rəqabət apara biləcək
-                peşəkarlar olaraq yetişdirmək üçün yola çıxmışıq.
-            </div>
-        </div></a>
-    </section>
+    <div id="anime"></div>
 </body>
 
 </html>
